--- a/AnalysisWorkshop3.ipynb
+++ b/AnalysisWorkshop3.ipynb
@@ -116,9 +116,9 @@
         "vocabulary: [\"I\", \"was\", \"hungry\", \"she\", \"not\"]\n",
         "\n",
         "\n",
-        "\"I was hungry. She was hungry.\" -> [1, 2, 2, 1, 0] #LIVE\n",
+        "\"I was hungry. She was hungry.\" -> #LIVE\n",
         "\n",
-        "\"I was not hungry. She was not hungry.\" -> [1, 2, 2, 1, 1] #LIVE\n",
+        "\"I was not hungry. She was not hungry.\" -> #LIVE\n",
         "\n",
         "Using Bag of Words on these two sentences informs us that the sentences discuss similar content, but tells us nothing about the meaning of each sentence.\n",
         "\n",
@@ -128,9 +128,9 @@
         "\n",
         "vocabulary: [\"I\", \"was\", \"hungry\", \"she\", \"when\", \"can\", \"we\", \"eat\"]\n",
         "\n",
-        "\"I was hungry. She was hungry.\" -> [1, 2, 2, 1, 0, 0, 0, 0] #LIVE\n",
+        "\"I was hungry. She was hungry.\" -> #LIVE\n",
         "\n",
-        "\"When can we eat?\" -> [0, 0, 0, 0, 1, 1, 1, 1] #LIVE\n",
+        "\"When can we eat?\" -> #LIVE\n",
         "\n",
         "Here we see that as the vocabulary gets larger, we end up with sentence vectors with more 0s (a concept called sparse vectors). This can take up a lot of memory and make it harder for models to process data.\n",
         "\n"
